--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -32,3 +32,15 @@
   float: right;
   width: 400px;
 }
+
+.img_float_euclid {
+  float: right;
+  width: 175px;
+  margin: 1rem;
+}
+
+.img_float_cfht {
+  float: left;
+  width: 250px;
+  margin: 1rem;
+}
