--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
     <!-- Google scholar icon -->
     <span class="my-span-icon">
         <a href="{{ site.googlescholar.owner_url }}" aria-label="{{ site.googlescholar.owner_name }}'s Google scholar" title="{{ site.googlescholar.owner_name }}'s Google scholar">
-            <i class="ai ai-google-scholar-square ai-2x" style="color:rgb(98, 108, 112)"/></i>
+            <i class="ai ai-google-scholar-square ai-2x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
@@ -26,6 +26,20 @@
     <span class="my-span-icon">
         <a href="{{ site.contact.contact_url }}" aria-label="Contact" title="Contact {{ site.github.owner_name }}">
             <i class="fas fa-envelope-square fa-2x" style="color:rgb(98, 108, 112)"></i>
+        </a>
+    </span>
+
+    <!-- Twitter icon -->
+    <span class="my-span-icon">
+        <a href="{{ site.twitter.owner_url }}" aria-label="Twitter" title="{{ site.myname }}'s Twitter">
+            <i class="fab fa-twitter fa-2x" style="color:rgb(98, 108, 112)"></i>
+        </a>
+    </span>
+
+    <!-- CV icon -->
+    <span class="my-span-icon">
+        <a href="{{ site.docs_path }}/CV_tobias_webpage.pdf" aria-label="CV" title="{{ site.myname }}'s CV">
+            <i class="ai ai-cv ai-2x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
