Icon changes in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,42 +4,42 @@
     <!-- Github icon -->
     <span class="my-span-icon">
         <a href="{{ site.github.owner_url }}" aria-label="{{ site.github.owner_name }}'s GitHub" title="{{ site.github.owner_name }}'s GitHub">
-            <i class="fab fa-github-square fa-2x" style="color:rgb(98, 108, 112)"></i>
+            <i class="fab fa-github-square fa-3x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
     <!-- Google scholar icon -->
     <span class="my-span-icon">
         <a href="{{ site.googlescholar.owner_url }}" aria-label="{{ site.googlescholar.owner_name }}'s Google scholar" title="{{ site.googlescholar.owner_name }}'s Google scholar">
-            <i class="ai ai-google-scholar-square ai-2x" style="color:rgb(98, 108, 112)"></i>
+            <i class="ai ai-google-scholar-square ai-3x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
     <!-- Linkedin icon -->
     <span class="my-span-icon">
         <a href="{{ site.linkedin.owner_url }}" aria-label="{{ site.linkedin.owner_name }}'s Linkedin" title="{{ site.linkedin.owner_name }}'s Linkedin">
-            <i class="fab fa-linkedin fa-2x" style="color:rgb(98, 108, 112)"></i>
+            <i class="fab fa-linkedin fa-3x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
     <!-- Contact icon -->
     <span class="my-span-icon">
         <a href="{{ site.contact.contact_url }}" aria-label="Contact" title="Contact {{ site.github.owner_name }}">
-            <i class="fas fa-envelope-square fa-2x" style="color:rgb(98, 108, 112)"></i>
+            <i class="fas fa-envelope-square fa-3x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
     <!-- Twitter icon -->
     <span class="my-span-icon">
         <a href="{{ site.twitter.owner_url }}" aria-label="Twitter" title="{{ site.myname }}'s Twitter">
-            <i class="fab fa-twitter fa-2x" style="color:rgb(98, 108, 112)"></i>
+            <i class="fab fa-twitter-square fa-3x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
     <!-- CV icon -->
     <span class="my-span-icon">
         <a href="{{ site.docs_path }}/CV_tobias_webpage.pdf" aria-label="CV" title="{{ site.myname }}'s CV">
-            <i class="ai ai-cv ai-2x" style="color:rgb(98, 108, 112)"></i>
+            <i class="ai ai-cv-square ai-3x" style="color:rgb(98, 108, 112)"></i>
         </a>
     </span>
 
