update selected papers html

--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,5 @@
 
-          <div class="publications">
-            {% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}
-          </div>
+<div class="publications">
+  <h2>Selected publications</h2>
+  {% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}
+</div>
